# SFINCS

./: .gitattributes  .gitignore  .readthedocs.yaml  CLAUDE.md  LICENSE  README.md  README.rst  sfincs_driver_v2.f90  version.txt
docs/: conf.py  (+17 more)
source/: Dockerfile  Dockerfile.gpu  Dockerfile.gpu.25.5.ccall  Dockerfile.gpu.25.7.ccall  Dockerfile.gpu.bak  Dockerfile.gpu.cc75  Dockerfile.gpu.cc86  Dockerfile.gpu.cc90  Dockerfile.gpu.test  Dockerfile.gpu.update01  Dockerfile.xpu  FREEWARE DISCLAIMER.txt  LICENSING CONDITIONS for Free Trial Copy.txt  Makefile.am  README.md  Singularityfile-gpu.def  Singularityfile.cpu  build.sh  build_cpu.sh  build_cpu_apptainer.sh  build_docker_cpu_local.sh  build_docker_local.sh  build_docker_local_gpu.sh  build_docker_local_gpu_TL.sh  build_gfortran_cpu.sh  build_gpu.sh  build_nvfortran_cpu.sh  build_nvfortran_gpu.sh  build_nvfortran_gpu_h7.sh  configure.ac  launch.json  run-sfincs.sh  run_sfincs.sh  sfincs.sln  sge-loop.sh  test-job.sh
source/bmi/: driver_bmi.f90  sfincs_bmi2.f90  sfincs_bmi2.f90.impl1  sfincs_bmi_driver_test2.f90  test_bmi.f90  test_sfincs_bmi2.f90
source/build_scripts/: Dockerfile  Dockerfile.cpu  Dockerfile.cpu.ifx  Dockerfile_cpu_local  Singularityfile-cpu.def  build_configuration.bat  build_cpu_singularity.sh  build_docker_cpu_local.sh  configure.ac
source/code_docs/: vegetation_lookup_figure.py
source/m4/: ax_openacc.m4
source/sfincs/: sfincs.opt.yaml  sfincs.vfproj
source/sfincs/x64/Release/: LICENSING CONDITIONS DELTARES FREE TRIAL EXECUTABLE.txt  LICENSING CONDITIONS DELTARES FREEWARE EXECUTABLE.txt  LICENSING CONDITIONS DELTARES SFINCS FREEWARE EXECUTABLE  LICENSING CONDITIONS for Free Trial Copy.txt
source/sfincs_dll/: sfincs_dll.vfproj
source/sfincs_lib/: deg2utm.opt.yaml  geometry.opt.yaml  interp.opt.yaml  quadtree.opt.yaml  sfincs_Visser.f90  sfincs_boundaries.opt.yaml  sfincs_continuity.opt.yaml  sfincs_crosssections.opt.yaml  sfincs_data.opt.yaml  sfincs_date.opt.yaml  sfincs_discharges.opt.yaml  sfincs_domain.opt.yaml  sfincs_error.opt.yaml  sfincs_infiltration.opt.yaml  sfincs_initial_conditions.opt.yaml  sfincs_input.opt.yaml  sfincs_lib.opt.yaml  sfincs_lib.vfproj  sfincs_meteo.opt.yaml  sfincs_momentum.opt.yaml  sfincs_ncinput.opt.yaml  sfincs_ncoutput.opt.yaml  sfincs_obspoints.opt.yaml  sfincs_output.opt.yaml  sfincs_snapwave.opt.yaml  sfincs_spiderweb.opt.yaml  sfincs_structures.opt.yaml  sfincs_subgrid.opt.yaml  sfincs_wavemaker.opt.yaml  snapwave_boundaries.opt.yaml  snapwave_data.opt.yaml  snapwave_date.opt.yaml  snapwave_domain.opt.yaml  snapwave_infragravity.opt.yaml  snapwave_ncinput.opt.yaml  snapwave_ncoutput.opt.yaml  snapwave_results.opt.yaml  snapwave_solver.opt.yaml
source/sigrid/: run-sfincs.sh
source/src/: CMakeLists.txt  Makefile.am  astro.f90  bicgstab.F90  bicgstab_diag_precond.F90  bicgstab_solver.f90  geometry.f90  quadtree.F90  quadtree.f90  run.sh  sfincs.f90  sfincs_advection_diffusion.f90  sfincs_bathtub.f90  sfincs_bmi.f90  sfincs_bmi2.f90  sfincs_bmi2.f90.impl2  sfincs_bmi2_prev.f90  sfincs_bmi2_stub.f90  sfincs_bmi_driver_test.f90  sfincs_boundaries.f90  sfincs_buildings.f90  sfincs_continuity.f90  sfincs_crosssections.f90  sfincs_data.f90  sfincs_date.f90  sfincs_discharges.f90  sfincs_dll.f90  sfincs_domain.f90  sfincs_driver.f90  sfincs_error.f90  sfincs_infiltration.F90  sfincs_infiltration.f90  sfincs_initial_conditions.F90  sfincs_input.f90  sfincs_lib.f90  sfincs_lib2.f90  sfincs_log.f90  sfincs_log.f90.reformatted  sfincs_meteo.f90  sfincs_momentum.f90  (+35 more)
source/src/snapwave/: RFtable.inp  RFveg.inc  interp.F90  snapwave_RFtable.f90  snapwave_boundaries.f90  snapwave_data.f90  snapwave_date.f90  snapwave_domain.f90  snapwave_infragravity.f90  snapwave_input.f90  snapwave_ncinput.F90  snapwave_ncoutput.F90  snapwave_results.f90  snapwave_solver.f90  snapwave_solver.f90.ori  snapwave_windsource.f90
source/src/utils/: sfincs_polygons.f90
source/tests/: test_sfincs_bmi2.f90  test_sfincs_bmi2_real.f90
source/third_party_open/Delft3D/: astro.f90
source/third_party_open/bicgstab/: bicgstab_solver_ilu.f90
source/third_party_open/netcdf/: netcdf4.sln  netcdf4.vcxproj  netcdf4_test.vfproj  netcdf_license_info.txt  netcdff.vfproj
source/third_party_open/netcdf/MyBuild/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  CTestTestfile.cmake  DartConfiguration.tcl  INSTALL.vcxproj  INSTALL.vcxproj.filters  NC4F.sln  RUN_TESTS.vcxproj  RUN_TESTS.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  libnetcdff.settings  netCDF-FortranConfig.cmake  netCDF-FortranConfigVersion.cmake  netcdf-fortran.pc
source/third_party_open/netcdf/MyBuild/docs/: CTestTestfile.cmake  INSTALL.vcxproj  INSTALL.vcxproj.filters  RUN_TESTS.vcxproj  RUN_TESTS.vcxproj.filters  cmake_install.cmake
source/third_party_open/netcdf/MyBuild/examples/: CTestTestfile.cmake  INSTALL.vcxproj  INSTALL.vcxproj.filters  RUN_TESTS.vcxproj  RUN_TESTS.vcxproj.filters  cmake_install.cmake
source/third_party_open/netcdf/MyBuild/fortran/: CTestTestfile.cmake  INSTALL.vcxproj  INSTALL.vcxproj.filters  RUN_TESTS.vcxproj  RUN_TESTS.vcxproj.filters  cmake_install.cmake  netcdf.inc  netcdff.vfproj  netcdff_c.vcxproj  netcdff_c.vcxproj.filters
source/third_party_open/netcdf/MyBuild/libsrc/: CTestTestfile.cmake  INSTALL.vcxproj  INSTALL.vcxproj.filters  RUN_TESTS.vcxproj  RUN_TESTS.vcxproj.filters  cmake_install.cmake
source/third_party_open/netcdf/MyBuild/nf03_test/: CTestTestfile.cmake  INSTALL.vcxproj  INSTALL.vcxproj.filters  RUN_TESTS.vcxproj  RUN_TESTS.vcxproj.filters  cmake_install.cmake  tst_f90.vfproj  tst_fill_int64.vfproj
source/third_party_open/netcdf/MyBuild/nf03_test4/: CTestTestfile.cmake  INSTALL.vcxproj  INSTALL.vcxproj.filters  RUN_TESTS.vcxproj  RUN_TESTS.vcxproj.filters  cmake_install.cmake  f90tst_fill.vfproj  f90tst_fill2.vfproj  f90tst_grps.vfproj  f90tst_nc4.vfproj  f90tst_path.vfproj  (+9 more)
source/third_party_open/netcdf/netcdf-fortran-4.6.1/: netcdff.vfproj  netcdff_c.vcxproj
source/third_party_open/utils/: deg2utm.f90  geometry.f90
(+598 files in other folders)
